# scene

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  conan.txt  conanfile.txt  deps.txt
source/scene/: CMakeLists.txt  Camera.cpp  Camera.hpp  Scene.cpp  Scene.hpp  SceneConfig.cpp  main.cpp
source/scene/Shapes/: Grid.hpp  Plane.cpp  SphereModel.cpp  VectorModel.cpp  VectorModel.hpp
source/scene/complex_objects/: BoneModel.cpp  BoneModel.hpp  PositionManipulator.cpp  PositionManipulator.hpp  SkeletonModel.cpp  SkeletonModel.hpp
source/scene/physics/: Physics3D.cpp  Physics3D.hpp  RigidBody.cpp  RigidBody.hpp
source/scene/primitives/: Mesh.cpp
source/scene/scene_objects/: Flyable.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  Rotatable.cpp  Rotatable.hpp  Selectable.cpp  Selectable.hpp
source/scene_lib/: CMakeLists.txt  Camera.cpp  Camera.hpp  Drawer.cpp  Drawer.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  SceneConfig.cpp  SceneConfig.hpp
source/scene_lib/Shapes/: Box.cpp  Box.hpp  BoxModel.cpp  BoxModel.hpp  Grid.cpp  Grid.hpp  Plane.cpp  Plane.hpp  Vector.cpp  Vector.hpp  VectorModel.cpp  VectorModel.hpp
source/scene_lib/complex_objects/: PositionManipulator.cpp  PositionManipulator.hpp  SkeletonModel.cpp  SkeletonModel.hpp
source/scene_lib/light/: PointLight.cpp  PointLight.hpp
source/scene_lib/primitives/: ColoredMesh.cpp  ColoredMesh.hpp  ColoredVertex.cpp  ColoredVertex.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Movable.cpp  Movable.hpp  Object.cpp  (+17 more)
source/scene_test/: CMakeLists.txt  main.cpp
(+19 files in other folders)
